add css modules and style loading

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,13 @@
 
 <head>
   <title>Kid Div</title>
+  <style>
+    html,
+    body {
+      margin: 0px;
+      padding: 0px;
+    }
+  </style>
 </head>
 
 <body>
