--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 
 <head>
   <title>Kid Div</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <style>
     html,
     body {
+      font-family: 'Roboto', sans-serif;
       margin: 0px;
       padding: 0px;
     }
