--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
       font-family: 'Roboto', sans-serif;
       margin: 0px;
       padding: 0px;
+      background: #D2ECFB;
+      color: #ffffff;
     }
   </style>
 </head>
