add HeaderLogin component and material UI styling and SVG icons

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Kid Div</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
   <style>
     html,
     body {
@@ -10,7 +10,7 @@
       margin: 0px;
       padding: 0px;
       background: #D2ECFB;
-      color: #ffffff;
+      color: rgb(1, 75, 107);
     }
   </style>
 </head>
